@@ -13,6 +13,8 @@ ubuntu-dev-tools (0.37ubuntu1) intrepid; urgency=low
     to authenticate with Launchpad.
   * debian/ubuntu-dev-tools.install: Added line to install common.py above to
     the correct location.
+  * requestsync: Use the functions in the common.py file above to authenticate
+    with Launchpad
 
   [ Siegfried-Angel Gevatter Pujals ]
   * Add the GNU General Public License header to all scripts.
